# CardGenerator

./: .env  .gitignore  README.md  index.html  install.sh  laucher.bat  package-lock.json  package.json  vite.config.js
Public/Css/Interne/: base.css  home.css
Public/Scripts/: home.js
ServExpress/: meta.json  urls.json
ServMano/: gestionnaireRequetes.js  outil.js  router.js  serveur.js
Views/: home.ejs
css/: index.css
json/: image.json
scripts/: index.js
src/: App.vue  index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/json/: datas.json
src-tauri/src/: command.rs  errors.rs  main.rs
src/Public/Css/Interne/: home.css
src/Public/Scripts/: home.js
src/assets/css/: card.module.css
src/assets/json/: datas copy.json  datas.json
src/components/apiComponent/: ajaxComponent.vue
src/components/cardComponent/: cardComponent.vue
src/components/cardComponent/imageCardComponent.vue/: imageCardComponent.vue
src/components/manuelComponent/: manuelComponent.vue
src/components/tauriComponent/: tauriComponent.vue
src/css/: card.module.css
src/scripts/: home.mjs
