[package]
name = "cardgenerator"
version = "1.1.0"
description = "A card generator Tauri App"
authors = ["Nathan-Al"]
license = "Free"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-execute", "protocol-asset", "window-start-dragging", "window-minimize", "dialog-save", "dialog-ask", "shell-open", "path-all", "dialog-message", "window-show", "window-unmaximize", "fs-all", "window-hide", "dialog-open", "window-unminimize", "dialog-confirm", "http-request", "window-close", "window-maximize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.23", features = ["json", "blocking"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
